<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:key="version"
            android:summary="v 2.0.1"
            android:title="当前版本" />
        <Preference
            android:key="share"
            android:title="@string/menu_share" />

    </PreferenceCategory>
    <PreferenceCategory android:title="关于作者">
        <Preference
            android:key="weibo"
            android:summary="@string/myweibo"
            android:title="微博" />
    </PreferenceCategory>
    <PreferenceCategory android:title="版权">
        <Preference
            android:summary="来源于网络，仅供学习交流，任何侵权使用与作者无关。"
            android:title="视频播放" />
    </PreferenceCategory>
</PreferenceScreen>