<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_music"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/pony_music" />
    </group>
    <item android:title="看剧吧">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_setting"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/menu_setting" />
                <item
                    android:id="@+id/action_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/menu_about" />
            </group>
        </menu>
    </item>
</menu>